[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
once_cell = "1.18.0"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
